--- a/app_express/prueba/views/user_form.ejs
+++ b/app_express/prueba/views/user_form.ejs
@@ -2,10 +2,9 @@
 	<head>
 	</head>
 	<body>
-
-		Nombre <input type="text" value="<%= name %>">
-		Edad <input type="text" value="<%= age %>">
-
+		<% users.forEach(function(user){ %>
+			<p><%= user.name %></p>
+		<% }) %>
 	</body>
 
 </html>
